# projet-annuel-al4

./: .gitattributes  .gitignore  BDD.md  README.md  contraintes et notation du projet.html  docker-compose.yml  package-lock.json
.github/workflows/: frontend.yml  protect_main.yml
Location_Moto/docs/adr/: 001-choix-backend.md  TEMPLATE.md
admin/: index.html  package-lock.json  package.json  tsconfig.app.json
admin/src/: App.tsx  index.css
admin/src/mocks/: motos.ts  reservations.ts
backend/: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
backend/docs/: BREAKING_CHANGES.md
backend/docs/ADR/: 0001-ddd-architecture.md  0002-prisma-orm.md
backend/prisma/: schema.prisma  seed.ts
backend/src/: main.ts
docs/frontend/adr/: 002-choix-frontend.md  003-choix-worker.md  README.md
documentation/: presentation_projet_location_de_motos.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/data/: motos.json
frontend/src/services/: api.client.ts  auth.service.ts  motos.service.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
helm/frontend/: Chart.yaml  values.yaml
helm/frontend/templates/: deployment.yaml  httproute.yaml  (+1 more)
postman/: moto-rental.postman_collection.json  moto-rental.postman_environment.json
worker/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
worker/src/: main.rs
(+143 files in other folders)
